<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="@dimen/H1"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/padding"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtName"
            android:hint="@string/Name_Sign_up"
            android:inputType="text"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            android:padding = "@dimen/padding"
            android:textSize="@dimen/normal_text"
            android:background = "@color/white"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_marginTop="@dimen/EditTextTopMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Mobile_No_Sign_up"
            android:id="@+id/edtRollNo"
            android:inputType="number"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="10"
            app:met_primaryColor="@color/colorPrimary"
            android:padding = "@dimen/padding"
            android:textSize="@dimen/normal_text"
            android:background = "@color/white"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_marginTop="@dimen/EditTextTopMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Address_Sign_up"
            android:id="@+id/edtBranch"
            android:inputType="text"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            android:padding = "@dimen/padding"
            android:textSize="@dimen/normal_text"
            android:background = "@color/white"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_marginTop="@dimen/EditTextTopMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/State_Sign_up"
            android:id="@+id/edtState"
            android:inputType="text"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            android:padding = "@dimen/padding"
            android:textSize="@dimen/normal_text"
            android:background = "@color/white"/>

        <com.example.anticorruptionapp.ExpandableHeightListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="#00000000"
            android:fadingEdge="none"
            android:focusable="false"
            android:scrollbars="none"
            android:id="@+id/state_list"
            android:visibility="gone">

        </com.example.anticorruptionapp.ExpandableHeightListView>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_marginTop="@dimen/EditTextTopMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/District_Sign_up"
            android:id="@+id/edtDistrict"
            android:inputType="text"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            android:padding = "@dimen/padding"
            android:textSize="@dimen/normal_text"
            android:background = "@color/white"/>
        <com.example.anticorruptionapp.ExpandableHeightListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="@color/colorPrimary"
            android:fadingEdge="none"
            android:focusable="false"
            android:scrollbars="none"
            android:id="@+id/district_list"
            android:visibility="gone">
        </com.example.anticorruptionapp.ExpandableHeightListView>
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:shadowColor="@color/black"
            android:text="@string/sign_up"
            android:background="@color/colorPrimary"
            android:textColor="@color/white" />
        </LinearLayout>
</ScrollView>