<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Profile.ProfilePage"
    android:orientation="vertical"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:id="@+id/profile_container">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true">
    <ImageView
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_done_black_24dp"
        android:background="@color/white"
        android:layout_gravity="end"
        android:padding="@dimen/padding"
        android:tint="@color/purple"
        android:layout_margin="@dimen/margin"
        tools:ignore="ContentDescription" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="@dimen/profile_image_size"
        android:layout_height="@dimen/profile_image_size"
        android:src="@drawable/profile"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/white"
        android:layout_marginTop="@dimen/margin"
        android:layout_centerInParent="true"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/change_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_camera_alt_black_24dp"
        android:layout_below="@+id/profile_image"
        android:layout_alignEnd="@+id/profile_image"
        android:layout_marginBottom="@dimen/margin"
        android:tint="@color/light_black"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:padding="@dimen/padding"
        android:text="@string/name"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/profile_views_gap"/>
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/padding"
        android:hint="@string/name"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/profile_views_gap"
        android:inputType="text"
        tools:ignore="Autofill" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:padding="@dimen/padding"
        android:text="@string/email"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/profile_views_gap"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/padding"
        android:hint="@string/email"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/profile_views_gap"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:padding="@dimen/padding"
        android:text="@string/designation"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/profile_views_gap"/>

    <EditText
        android:id="@+id/designation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/padding"
        android:hint="@string/designation"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/profile_views_gap"
        android:inputType="text"
        tools:ignore="Autofill" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:padding="@dimen/padding"
        android:text="@string/registered_mobile_no"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/profile_views_gap"/>
    <EditText
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/padding"
        android:hint="@string/contact"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/profile_views_gap"
        android:inputType="phone"
        android:digits="0123456789"
        android:maxLength="10"
        tools:ignore="Autofill" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:padding="@dimen/padding"
        android:text="@string/home_address"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/profile_views_gap"/>
    <EditText
        android:id="@+id/home_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/padding"
        android:hint="@string/address"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/profile_views_gap"
        android:inputType="text"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/home_district"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/padding"
        android:hint="@string/district"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/profile_views_gap"
        android:inputType="text"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/home_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/padding"
        android:hint="@string/state"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/profile_views_gap"
        android:inputType="text"
        tools:ignore="Autofill" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:padding="@dimen/padding"
        android:text="@string/work_address"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/profile_views_gap"/>
    <EditText
        android:id="@+id/work_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/padding"
        android:hint="@string/address"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/profile_views_gap"
        android:inputType="text"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/work_district"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/padding"
        android:hint="@string/district"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/profile_views_gap"
        android:inputType="text"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/work_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/padding"
        android:hint="@string/state"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/profile_views_gap"
        android:inputType="text"
        tools:ignore="Autofill" />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
    </RelativeLayout>

</ScrollView>